Added gtest for unit testing  Found nasty bug when assigning ot compressed indexes

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -2,8 +2,24 @@
 execute_process( COMMAND ../updateCMakeSources.sh WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} )
 file(STRINGS CMakeSources.txt SRC_LIST)
 
-include_directories( ../src )
+include( ExternalProject )
+
+# Add gtest
+ExternalProject_Add(
+	googletest
+	URL https://googletest.googlecode.com/files/gtest-1.6.0.zip
+	UPDATE_COMMAND ""
+	INSTALL_COMMAND ""
+	)
+
+ExternalProject_Get_Property(googletest source_dir)
+include_directories( ../src ${source_dir}/include)
+
+ExternalProject_Get_Property(googletest binary_dir)
+link_directories( ${binary_dir} )
+
 
 add_executable(test${CMAKE_PROJECT_NAME} ${SRC_LIST})
-target_link_libraries(test${CMAKE_PROJECT_NAME} lib${CMAKE_PROJECT_NAME})
 
+add_dependencies(test${CMAKE_PROJECT_NAME} googletest)
+target_link_libraries(test${CMAKE_PROJECT_NAME} gtest gtest_main )
