--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,6 +3,7 @@ execute_process( COMMAND ../updateCMakeSources.sh WORKING_DIRECTORY ${CMAKE_CURR
 file(STRINGS CMakeSources.txt SRC_LIST)
 
 add_library(${CMAKE_PROJECT_NAME} ${SRC_LIST})
+target_link_libraries(${CMAKE_PROJECT_NAME} ${EXTERNAL_LIBRARIES} )
 
 
 
