--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,10 +16,12 @@ if(OPENMP_FOUND)
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
   set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
   SET( EXTERNAL_LIBRARIES ${EXTERNAL_LIBRARIES} ${OpenMP_LIBRARIES} )
+else()
+set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unknown-pragmas " )
 endif()
 
 # Proc flags
-set( CMAKE_CXX_FLAGS "-Wall -Wextra -Werror " )
+set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Werror " )
 
 include_directories( ${EXTERNAL_INCLUDES} )
 
