--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,9 +27,35 @@ if (NOT CMAKE_BUILD_TYPE)
   set(CMAKE_BUILD_TYPE "Release")
 endif()
 
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra " )
-SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Werror " )
-SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}  -march=native -DEIGEN_NO_DEBUG ")
+if ( "${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang" )
+  set (CLANG TRUE)
+elseif( "${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU" )
+  set (GCC TRUE)
+endif()
+
+  # using GCC
+if ( GCC OR CLANG )
+	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra " )
+	SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Werror " )
+
+	if( GCC AND APPLE )
+		SET( EXTERNAL_LIBRARIES ${EXTERNAL_LIBRARIES} ${EXTERNAL_LIBRARIES} stdc++ )
+	endif()
+
+	#Do not use -march=native on gcc < 4.3
+	SET(HANDLE_MARCH_NATIVE TRUE)
+	if (GCC)
+		execute_process(COMMAND ${CMAKE_C_COMPILER} -dumpversion OUTPUT_VARIABLE GCC_VERSION)
+		if ( NOT GCC_VERSION VERSION_GREATER 4.3 AND NOT GCC_VERSION VERSION_EQUAL 4.3 )
+			SET(HANDLE_MARCH_NATIVE FALSE)
+		endif()
+	endif()
+	if( HANDLE_MARCH_NATIVE )
+		SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}  -march=native -DEIGEN_NO_DEBUG ")
+	else()
+		SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}  -msse -msse2 -DEIGEN_NO_DEBUG ")
+	endif()
+endif()
 
 include_directories( ${EXTERNAL_INCLUDES} )
 
