--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -18,13 +18,18 @@ FIND_PACKAGE(OpenMP)
 if(OPENMP_FOUND)
   set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
-  set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} ${OpenMP_EXE_LINKER_FLAGS}")
-  SET( EXTERNAL_LIBRARIES ${EXTERNAL_LIBRARIES} ${OpenMP_LIBRARIES} )
 else()
 set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unknown-pragmas " )
 endif()
 
-# Proc flags
+# boost
+find_package(Boost 1.36.0 COMPONENTS serialization)
+if( Boost_FOUND )
+	SET( EXTERNAL_INCLUDES ${EXTERNAL_INCLUDES} ${Boost_INCLUDE_DIR} )
+	SET( EXTERNAL_LIBRARIES ${EXTERNAL_LIBRARIES} ${EXTERNAL_LIBRARIES} boost_serialization )
+endif()
+
+# Build types and processor flags
 
 if (NOT CMAKE_BUILD_TYPE)
   message(STATUS "No build type selected, default to Release")
@@ -37,7 +42,6 @@ elseif( "${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU" )
   set (GCC TRUE)
 endif()
 
-# using GCC
 if ( GCC OR CLANG )
 	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra " )
 	SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Werror " )
