--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,6 +2,7 @@ project(bogus)
 cmake_minimum_required(VERSION 2.6)
 
 OPTION( TESTS "Build tests" ON )
+OPTION( APPS "Build apps" ON )
 OPTION( BOOST_SERIALIZATION "Use boost::serialization" ON )
 
 SET( BOGUS_ROOT ${CMAKE_CURRENT_SOURCE_DIR} )
@@ -25,12 +26,12 @@ endif()
 
 # boost
 if( BOOST_SERIALIZATION )
-	find_package(Boost 1.36.0 COMPONENTS serialization)
-	if( Boost_FOUND )
-		add_definitions( -DBOGUS_WITH_BOOST_SERIALIZATION )
-		SET( EXTERNAL_INCLUDES ${EXTERNAL_INCLUDES} ${Boost_INCLUDE_DIR} )
-		SET( EXTERNAL_LIBRARIES ${EXTERNAL_LIBRARIES} ${EXTERNAL_LIBRARIES} boost_serialization )
-	endif()
+		find_package(Boost 1.36.0 COMPONENTS serialization)
+		if( Boost_FOUND )
+				add_definitions( -DBOGUS_WITH_BOOST_SERIALIZATION )
+				SET( EXTERNAL_INCLUDES ${EXTERNAL_INCLUDES} ${Boost_INCLUDE_DIR} )
+				SET( EXTERNAL_LIBRARIES ${EXTERNAL_LIBRARIES} ${EXTERNAL_LIBRARIES} boost_serialization )
+		endif()
 endif()
 
 # Build types and processor flags
@@ -47,32 +48,35 @@ elseif( "${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU" )
 endif()
 
 if ( GCC OR CLANG )
-	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra " )
-	SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Werror " )
+		SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra " )
+		SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Werror " )
 
-	if( GCC AND APPLE )
-		SET( EXTERNAL_LIBRARIES ${EXTERNAL_LIBRARIES} ${EXTERNAL_LIBRARIES} stdc++ )
-	endif()
-
-	#Do not use -march=native on gcc < 4.3
-	SET(HANDLE_MARCH_NATIVE TRUE)
-	if (GCC)
-		execute_process(COMMAND ${CMAKE_C_COMPILER} -dumpversion OUTPUT_VARIABLE GCC_VERSION)
-		if ( NOT GCC_VERSION VERSION_GREATER 4.3 AND NOT GCC_VERSION VERSION_EQUAL 4.3 )
-			SET(HANDLE_MARCH_NATIVE FALSE)
+		if( GCC AND APPLE )
+				SET( EXTERNAL_LIBRARIES ${EXTERNAL_LIBRARIES} ${EXTERNAL_LIBRARIES} stdc++ )
 		endif()
-	endif()
-	if( HANDLE_MARCH_NATIVE )
-		SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}  -march=native -DEIGEN_NO_DEBUG ")
-	else()
-		SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}  -msse -msse2 -DEIGEN_NO_DEBUG ")
-	endif()
+
+		#Do not use -march=native on gcc < 4.3
+		SET(HANDLE_MARCH_NATIVE TRUE)
+		if (GCC)
+				execute_process(COMMAND ${CMAKE_C_COMPILER} -dumpversion OUTPUT_VARIABLE GCC_VERSION)
+				if ( NOT GCC_VERSION VERSION_GREATER 4.3 AND NOT GCC_VERSION VERSION_EQUAL 4.3 )
+						SET(HANDLE_MARCH_NATIVE FALSE)
+				endif()
+		endif()
+		if( HANDLE_MARCH_NATIVE )
+				SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}  -march=native -DEIGEN_NO_DEBUG ")
+		else()
+				SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}  -msse -msse2 -DEIGEN_NO_DEBUG ")
+		endif()
 endif()
 
 include_directories( ${EXTERNAL_INCLUDES} )
 
 add_subdirectory( src )
 if( TESTS )
-	enable_testing()
-	add_subdirectory( tests )
+		enable_testing()
+		add_subdirectory( tests )
+endif()
+if( APPS )
+		add_subdirectory( apps )
 endif()
