Renamed 'src' as 'bogus' to emforce consistency between installed and not-installed includes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,7 +72,7 @@ endif()
 
 include_directories( ${EXTERNAL_INCLUDES} )
 
-add_subdirectory( src )
+add_subdirectory( bogus )
 if( TESTS )
 		enable_testing()
 		add_subdirectory( tests )
