--- a/bogus/CMakeLists.txt
+++ b/bogus/CMakeLists.txt
@@ -14,7 +14,7 @@ ENDFOREACH(item ${SRC_LIST})
 
 MESSAGE( STATUS ${INTERFACES} )
 
-INSTALL( DIRECTORY Core DESTINATION include/bogus )
-INSTALL( FILES ${INTERFACES} DESTINATION include/bogus/Interfaces )
+INSTALL( DIRECTORY Core DESTINATION include/${CMAKE_PROJECT_NAME} )
+INSTALL( FILES ${INTERFACES} DESTINATION include${CMAKE_PROJECT_NAME}/Interfaces )
 INSTALL( TARGETS ${CMAKE_PROJECT_NAME} LIBRARY DESTINATION lib )
 
