Specialization of LOcalSOCSOlver for 2D Coulomb friction

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -8,7 +8,7 @@ endif()
 
 find_package(FCLib)
 if( FCLIB_FOUND )
-	include_directories( ${FCLib_INCLUDE_DIR} )
+	include_directories( ${FCLib_INCLUDE_DIRS} )
 	add_executable (FCLibLoader FCLibLoader.cpp)
 	target_link_libraries (FCLibLoader ${CMAKE_PROJECT_NAME} ${FCLib_LIBRARIES} )
 endif()
