--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ OPTION( TESTS "Build tests" ON )
 OPTION( APPS "Build apps" ON )
 OPTION( LIB "Build lib" ON )
 OPTION( BOOST_SERIALIZATION "Use boost::serialization" ON )
+OPTION( MKL "Use mkl" OFF )
 
 SET( BOGUS_ROOT ${CMAKE_CURRENT_SOURCE_DIR} )
 SET( CMAKE_MODULE_PATH ${BOGUS_ROOT}/cmake )
@@ -27,20 +28,22 @@ endif()
 
 # boost
 if( BOOST_SERIALIZATION )
-		find_package(Boost 1.36.0 COMPONENTS serialization)
-		if( Boost_FOUND )
-				add_definitions( -DBOGUS_WITH_BOOST_SERIALIZATION )
-				SET( EXTERNAL_INCLUDES ${EXTERNAL_INCLUDES} ${Boost_INCLUDE_DIR} )
-				SET( EXTERNAL_LIBRARIES ${EXTERNAL_LIBRARIES} boost_serialization )
-		endif()
+                find_package(Boost 1.36.0 COMPONENTS serialization)
+                if( Boost_FOUND )
+                                add_definitions( -DBOGUS_WITH_BOOST_SERIALIZATION )
+                                SET( EXTERNAL_INCLUDES ${EXTERNAL_INCLUDES} ${Boost_INCLUDE_DIR} )
+                                SET( EXTERNAL_LIBRARIES ${EXTERNAL_LIBRARIES} boost_serialization )
+                endif()
 endif()
 
 # MKL
-find_package( MKL )
-if( MKL_FOUND )
-				add_definitions( -DBOGUS_WITH_MKL )
-				SET( EXTERNAL_INCLUDES ${EXTERNAL_INCLUDES} ${MKL_INCLUDE_DIRS} )
-				SET( EXTERNAL_LIBRARIES ${EXTERNAL_LIBRARIES} ${MKL_LIBRARIES} mkl_intel_lp64 mkl_intel_thread mkl_core iomp5 )
+if( MKL )
+        find_package( MKL )
+        if( MKL_FOUND )
+                                add_definitions( -DBOGUS_WITH_MKL )
+                                SET( EXTERNAL_INCLUDES ${EXTERNAL_INCLUDES} ${MKL_INCLUDE_DIRS} )
+                                SET( EXTERNAL_LIBRARIES ${EXTERNAL_LIBRARIES} ${MKL_LIBRARIES} mkl_intel_lp64 mkl_intel_thread mkl_core iomp5 )
+        endif()
 endif()
 
 # Build types and processor flags
@@ -57,37 +60,37 @@ elseif( "${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU" )
 endif()
 
 if ( GCC OR CLANG )
-		SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra " )
-		SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Werror " )
+                SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra " )
+                SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Werror " )
 
-		if( GCC AND APPLE )
-				SET( EXTERNAL_LIBRARIES ${EXTERNAL_LIBRARIES} ${EXTERNAL_LIBRARIES} stdc++ )
-		endif()
+                if( GCC AND APPLE )
+                                SET( EXTERNAL_LIBRARIES ${EXTERNAL_LIBRARIES} ${EXTERNAL_LIBRARIES} stdc++ )
+                endif()
 
-		#Do not use -march=native on gcc < 4.3
-		SET(HANDLE_MARCH_NATIVE TRUE)
-		if (GCC)
-				execute_process(COMMAND ${CMAKE_C_COMPILER} -dumpversion OUTPUT_VARIABLE GCC_VERSION)
-				if ( NOT GCC_VERSION VERSION_GREATER 4.3 AND NOT GCC_VERSION VERSION_EQUAL 4.3 )
-						SET(HANDLE_MARCH_NATIVE FALSE)
-				endif()
-		endif()
-		if( HANDLE_MARCH_NATIVE )
-				SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}  -march=native -DEIGEN_NO_DEBUG ")
-		else()
-				SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}  -msse -msse2 -DEIGEN_NO_DEBUG ")
-		endif()
+                #Do not use -march=native on gcc < 4.3
+                SET(HANDLE_MARCH_NATIVE TRUE)
+                if (GCC)
+                                execute_process(COMMAND ${CMAKE_C_COMPILER} -dumpversion OUTPUT_VARIABLE GCC_VERSION)
+                                if ( NOT GCC_VERSION VERSION_GREATER 4.3 AND NOT GCC_VERSION VERSION_EQUAL 4.3 )
+                                                SET(HANDLE_MARCH_NATIVE FALSE)
+                                endif()
+                endif()
+                if( HANDLE_MARCH_NATIVE )
+                                SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}  -march=native -DEIGEN_NO_DEBUG ")
+                else()
+                                SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}  -msse -msse2 -DEIGEN_NO_DEBUG ")
+                endif()
 endif()
 
 include_directories( ${EXTERNAL_INCLUDES} )
 
 if( LIB )
-	add_subdirectory( bogus )
+        add_subdirectory( bogus )
 endif()
 if( TESTS )
-		enable_testing()
-		add_subdirectory( tests )
+                enable_testing()
+                add_subdirectory( tests )
 endif()
 if( APPS )
-		add_subdirectory( apps )
+                add_subdirectory( apps )
 endif()
