- Concurrent reset safety for NaiveSharedPtr  - Fix uninitialization bug in regularized GS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,7 +60,7 @@ elseif( "${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU" )
 endif()
 
 if ( GCC OR CLANG )
-                SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -std=c++98" )
+                SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra " )
                 SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Werror " )
 
                 if( GCC AND APPLE )
@@ -80,6 +80,10 @@ if ( GCC OR CLANG )
                 else()
                                 SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}  -msse -msse2 -DEIGEN_NO_DEBUG ")
                 endif()
+endif()
+
+if( MSVC )
+        add_definitions( -DBOGUS_DONT_USE_BUILTIN_ATOMICS )
 endif()
 
 include_directories( ${EXTERNAL_INCLUDES} )
