- API-breaking: Default to compressed indexes ( now there is an UNCOMPRESSED flag )  - Doc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,6 +7,10 @@ OPTION( LIB "Build lib" ON )
 OPTION( BOOST_SERIALIZATION "Use boost::serialization" ON )
 OPTION( MKL "Use mkl" OFF )
 
+OPTION( WITH_2D "Build lib with 2d support" ON )
+OPTION( WITH_3D "Build lib with 3d support" ON )
+OPTION( WITH_DYNAMIC "Build lib with dynamic dim support" OFF )
+
 SET( BOGUS_ROOT ${CMAKE_CURRENT_SOURCE_DIR} )
 SET( CMAKE_MODULE_PATH ${BOGUS_ROOT}/cmake )
 
@@ -89,6 +93,15 @@ endif()
 include_directories( ${EXTERNAL_INCLUDES} )
 
 if( LIB )
+                if( WITH_2D )
+                        add_definitions( -DBOGUS_INSTANTIATE_2D_SOC )
+                endif()
+                if( WITH_3D )
+                        add_definitions( -DBOGUS_INSTANTIATE_3D_SOC )
+                endif()
+                if( WITH_DYNAMIC )
+                        add_definitions( -DBOGUS_INSTANTIATE_DYNAMIC_SOC )
+                endif()
         add_subdirectory( bogus )
 endif()
 if( TESTS )
