--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,16 +93,16 @@ endif()
 include_directories( ${EXTERNAL_INCLUDES} )
 
 if( LIB )
-                if( WITH_2D )
-                        add_definitions( -DBOGUS_INSTANTIATE_2D_SOC )
-                endif()
-                if( WITH_3D )
-                        add_definitions( -DBOGUS_INSTANTIATE_3D_SOC )
-                endif()
-                if( WITH_DYNAMIC )
-                        add_definitions( -DBOGUS_INSTANTIATE_DYNAMIC_SOC )
-                endif()
-        add_subdirectory( bogus )
+        if( WITH_2D )
+                add_definitions( -DBOGUS_INSTANTIATE_2D_SOC )
+        endif()
+        if( WITH_3D )
+                add_definitions( -DBOGUS_INSTANTIATE_3D_SOC )
+        endif()
+        if( WITH_DYNAMIC )
+                add_definitions( -DBOGUS_INSTANTIATE_DYNAMIC_SOC )
+        endif()
+        add_subdirectory( src )
 endif()
 if( TESTS )
                 enable_testing()
