--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -16,5 +16,8 @@ ENDFOREACH(item ${SRC_LIST})
 
 INSTALL( DIRECTORY Core DESTINATION include/${CMAKE_PROJECT_NAME} )
 INSTALL( FILES ${INTERFACES} DESTINATION include/${CMAKE_PROJECT_NAME}/Interfaces )
-INSTALL( TARGETS ${CMAKE_PROJECT_NAME} LIBRARY DESTINATION lib )
+INSTALL( TARGETS ${CMAKE_PROJECT_NAME}
+  LIBRARY DESTINATION lib
+  RUNTIME DESTINATION lib
+  ARCHIVE DESTINATION lib )
 
