Moved SOC from Core to Extra

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,6 +15,7 @@ FOREACH(item ${SRC_LIST})
 ENDFOREACH(item ${SRC_LIST})
 
 INSTALL( DIRECTORY Core DESTINATION include/${CMAKE_PROJECT_NAME} )
+INSTALL( DIRECTORY Extra DESTINATION include/${CMAKE_PROJECT_NAME} )
 INSTALL( FILES ${INTERFACES} DESTINATION include/${CMAKE_PROJECT_NAME}/Interfaces )
 INSTALL( TARGETS ${CMAKE_PROJECT_NAME}
   LIBRARY DESTINATION lib
