--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,6 +4,8 @@ cmake_minimum_required(VERSION 2.6)
 OPTION( TESTS "Build tests" ON )
 OPTION( APPS "Build apps" ON )
 OPTION( LIB "Build lib" ON )
+
+OPTION( OPENMP "Use OpenMP" ON )
 OPTION( BOOST_SERIALIZATION "Use boost::serialization" ON )
 OPTION( MKL "Use mkl" OFF )
 
@@ -18,16 +20,18 @@ SET( CMAKE_MODULE_PATH ${BOGUS_ROOT}/cmake )
 # Eigen
 FIND_PACKAGE(Eigen3 REQUIRED)
 SET( EXTERNAL_INCLUDES ${EIGEN3_INCLUDE_DIR} )
-add_definitions(-DEIGEN_DONT_PARALLELIZE)
 SET( EXTERNAL_LIBRARIES "" )
 
-# OpenMP / pthreads
-FIND_PACKAGE(OpenMP)
-if(OPENMP_FOUND)
-  set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
-  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
-else()
-set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unknown-pragmas " )
+# OpenMP
+if( OPENMP )
+	FIND_PACKAGE(OpenMP)
+    if(OPENMP_FOUND)
+		set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
+		set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
+		add_definitions(-DEIGEN_DONT_PARALLELIZE)
+	else()
+    	set( CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unknown-pragmas " )
+    endif()
 endif()
 
 # boost
@@ -94,15 +98,6 @@ endif()
 include_directories( ${EXTERNAL_INCLUDES} )
 
 if( LIB )
-        if( WITH_2D )
-                add_definitions( -DBOGUS_INSTANTIATE_2D_SOC )
-        endif()
-        if( WITH_3D )
-                add_definitions( -DBOGUS_INSTANTIATE_3D_SOC )
-        endif()
-        if( WITH_DYNAMIC )
-                add_definitions( -DBOGUS_INSTANTIATE_DYNAMIC_SOC )
-        endif()
         add_subdirectory( src )
 endif()
 if( TESTS )
