FCLibLoader updated for fclib 0.2  Absolute URLS in README

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,6 +82,7 @@ if ( GCC OR CLANG )
                                 if ( NOT GCC_VERSION VERSION_GREATER 4.3 AND NOT GCC_VERSION VERSION_EQUAL 4.3 )
                                                 SET(HANDLE_MARCH_NATIVE FALSE)
                                 endif()
+                    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ffast-math" )
                 endif()
                 if( HANDLE_MARCH_NATIVE )
                                 SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}  -march=native -DEIGEN_NO_DEBUG ")
