Add STRICT and FAST_MATH CMake compilation options

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,9 @@ OPTION( WITH_2D "Build lib with 2d support" ON )
 OPTION( WITH_3D "Build lib with 3d support" ON )
 OPTION( WITH_DYNAMIC "Build lib with dynamic dim support" OFF )
 
-OPTION( CPP11 "Build with c++11 standard" OFF )
+OPTION( CPP11     "Build with c++11 standard" OFF )
+OPTION( STRICT    "Treat warnings as errors (-Werror)" OFF )
+OPTION( FAST_MATH "Treat warnings as errors (-Werror)" ON )
 
 SET( BOGUS_ROOT ${CMAKE_CURRENT_SOURCE_DIR} )
 SET( CMAKE_MODULE_PATH ${BOGUS_ROOT}/cmake )
@@ -74,10 +76,15 @@ if ( GCC OR CLANG )
                 if( CPP11 )
                         SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -Wno-deprecated-declarations " )
                 endif()
-                SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -Werror " )
+                if( STRICT )
+                        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror " )
+                endif()
+				if( FAST_MATH )
+					    SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} -ffast-math" )
+				endif()
 
                 if( GCC AND APPLE )
-                                SET( EXTERNAL_LIBRARIES ${EXTERNAL_LIBRARIES} ${EXTERNAL_LIBRARIES} stdc++ )
+                        SET( EXTERNAL_LIBRARIES ${EXTERNAL_LIBRARIES} stdc++ )
                 endif()
 
                 #Do not use -march=native on gcc < 4.3
@@ -87,8 +94,9 @@ if ( GCC OR CLANG )
                                 if ( NOT GCC_VERSION VERSION_GREATER 4.3 AND NOT GCC_VERSION VERSION_EQUAL 4.3 )
                                                 SET(HANDLE_MARCH_NATIVE FALSE)
                                 endif()
-                    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -ffast-math" )
+
                 endif()
+
                 if( HANDLE_MARCH_NATIVE )
                                 SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}  -march=native -DEIGEN_NO_DEBUG ")
                 else()
