Fix minimum cmake version for ExternalProject

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,12 +1,12 @@
-cmake_minimum_required(VERSION 2.8)
+cmake_minimum_required(VERSION 2.8.2)
 
 if( TESTS_NAMES )
-	SET( SRC_LIST ${TESTS_NAMES} )
-	MESSAGE( STATUS "Building tests: " ${SRC_LIST} )
+    SET( SRC_LIST ${TESTS_NAMES} )
+    MESSAGE( STATUS "Building tests: " ${SRC_LIST} )
 else()
-	execute_process( COMMAND ../updateCMakeSources.sh WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} )
-	file(STRINGS CMakeSources.txt SRC_LIST)
-	MESSAGE( STATUS "Building all tests" )
+    execute_process( COMMAND ../updateCMakeSources.sh WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} )
+    file(STRINGS CMakeSources.txt SRC_LIST)
+    MESSAGE( STATUS "Building all tests" )
 endif()
 
 include( ExternalProject )
@@ -20,17 +20,16 @@ else()
 endif()
 
 if( MSVC )
-	set( GTEST_CMAKE_ARGS -Dgtest_force_shared_crt=ON )
+    set( GTEST_CMAKE_ARGS -Dgtest_force_shared_crt=ON )
 else()
-	set( GTEST_CMAKE_ARGS )
+    set( GTEST_CMAKE_ARGS )
 endif()
 
 # Add gtest
 ExternalProject_Add(
   googletest
   URL https://github.com/google/googletest/archive/release-1.7.0.tar.gz
-  URL_HASH MD5=4ff6353b2560df0afecfbda3b2763847
-
+  URL_MD5 4ff6353b2560df0afecfbda3b2763847
   CMAKE_ARGS ${GTEST_CMAKE_ARGS}
   UPDATE_COMMAND ""
   PATCH_COMMAND ${GTEST_PATCH_COMMAND}
