--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -10,6 +10,6 @@ find_package(FCLib)
 if( FCLIB_FOUND )
         include_directories( ${FCLib_INCLUDE_DIRS} )
         add_executable (FCLibLoader FCLibLoader.cpp)
-        target_link_libraries (FCLibLoader ${CMAKE_PROJECT_NAME} ${FCLib_LIBRARIES} )
+        target_link_libraries (FCLibLoader ${PROJECT_NAME} ${FCLib_LIBRARIES} )
 endif()
 
